# WebGIS

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  launch.py  ruff.toml  run_start.bat  run_status.bat  run_stop.bat  start.bat  start.sh  start_backend.py  stop.bat  stop.sh
Code/algorithms/providers/Python/: README.md  conftest.py  dataset_config.py  debug_omega_profile.py  debug_station.py  pyproject.toml  requirements.txt
Code/algorithms/providers/Python/algorithms/: __init__.py  _parallel.py  block_inversion.py  fy.py  inversion.py  ndvi.py  omega.py  omega_avg.py  physics.py  station.py  validation.py
Code/algorithms/providers/Python/analysis/: spatial_stats.py  timeseries_analysis.py  visualization.py
Code/algorithms/providers/Python/contracts/: __init__.py  api_errors.py  data.py  event.py  job.py  modes.py  product.py  provider_manifest.py  request_templates.py  runtime.py  serialization.py  template_deriver.py  validation.py  validation_feedback.py
Code/algorithms/providers/Python/data_access/: __init__.py  cache_store.py  consumers.py  contracts.py  data_preprocessor.py  fetcher.py  locator.py  materializer.py  prepared_input.py  registry.py  resolver.py  spatial_aligner.py  universal_reader.py
Code/algorithms/providers/Python/ingest/: __init__.py  daily_bundle.py  fy.py  mat_bundle.py  ndvi.py  ndvi_hdf_preprocess.py  smap.py  station.py  timeseries_bundle.py
Code/algorithms/providers/Python/interfaces/: __init__.py  datasource.py  logger.py  product_sink.py  scheduler.py
Code/algorithms/providers/Python/mat2py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Code/algorithms/providers/Python/modules/: __init__.py  base.py  block_inversion.py  bundles.py  compat.py  data_access_nodes.py  export.py  fitting.py  fy.py  graph_io.py  inversion.py  ndvi.py  (+8 more)
(+958 files in other folders)
